less/common/notifications.less
@import "../mf-mixins.less";
@toastNotificationColor: #373737;

#notifications {
	// it's only a container, should not get in the way
	height: 0;
	// needed for Android 4.x
	position: absolute;
	z-index: 5;
	// needed for MSIE 9 (Windows Phone 7)
	width: 100%;
}

/* Notifications */
#mf-notification,
.drawer {
	bottom: 0;
	left: 0;
	right: 0;
	background-color: @searchBoxColorTo;
	box-shadow: 0 -1px 8px 0 rgba(0, 0, 0, 0.35);
	word-wrap: break-word;
	// needs to be higher than for overlays to show on top of overlays
	z-index: 5;
	// don't use visibility: hidden in old browsers that don't support animations
	display: none;

	&.visible {
		display: block;
	}
}

.animations .beta,
.animations .alpha {
	#mf-notification,
	.drawer {
		@duration: .25s;
		display: block;
		visibility: hidden;
		/* we can't determine the actual size of the drawer in CSS, so this is
		 * an estimate; it doesn't have to be exact because it's used only for
		 * the sliding animation, not for hiding the drawer */
		.transform( translate3d(0, 100px, 0) );
		opacity: 0;
		// delay visibility transition to make other transitions visible
		// http://fvsch.com/code/transition-fade/test5.html
		.transition( transform @duration, opacity @duration, visibility 0s @duration );

		&.visible {
			.transition( transform @duration, opacity @duration );
			visibility: visible;
			opacity: 1;
			.transform( translate3d(0, 0, 0) );
		}
	}
}

#mf-notification {
	font-size: 0.9em;
	padding: 16px 38px 18px 22px;  /* 38px is 22px padding + close button icon 16px */

	&.noButton button {
		display: none;
	}

	&.toast {
		left: 10%;
		right: 10%;
		padding: 0;
		font-size: @baseFontSize * 0.8;
		background-color: @toastNotificationColor;
		color: white;
		margin: 0 auto 20px auto;
		width: 80%;
		text-align: center;
		border-radius: 1px;
		box-shadow: 0 0 1px 3px @toastNotificationColor;

		button {
			display: none;
		}

		&.error {
			background-image: url(images/error.png);
			background-position: 16px 50%;
			background-repeat: no-repeat;
			padding-left: 5%;
			width: 75%;
			border: none; // FIXME: this is needed because a global .error adds border
		}

		&.landmark {
			color: #F7F737;
		}

		&.locked button {
			display: block;
			top: 0.8em;
			right: 1.4em;
		}

		> div {
			padding: 0.8em 1.4em;
		}
	}

	> div {
		position: relative;
	}

	.mw-cite-backlink {
		display: none;
	}

	button {
		top: 22px;
		right: 22px; /* padding of #content_wrapper */
		width: 16px;
		height: 12px;
		background: url(../common/images/close-button-beta.png) no-repeat scroll 0 0 transparent;
		margin: 0;
		background-position: right center;
		.background-size( auto, 12px );
		cursor: pointer;
		position: absolute;
		text-indent: -999px;
		overflow: hidden;
		border: none;
	}

	h3 {
		margin: 0;
		padding-right: 4px;
		line-height: 1em;
		display: inline;
	}

	a:visited, a {
		color: #3354C0;
	}

	p {
		line-height: 1.2;
		margin: 0 0 .5em;

		&:last-child {
			margin: 0;
		}
	}

	.progress-bar {
		margin: .9em 0 0;
	}
}

